<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/RegisterPageLogo"
            android:layout_width="@dimen/_180"
            android:layout_height="@dimen/_120"
            android:layout_gravity="top|center"
            android:layout_marginBottom="@dimen/_10"
            android:layout_marginTop="@dimen/_20"
            android:src="@drawable/icon4"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="LogIn"
            android:text="@string/fill_txt"
            android:textStyle="bold"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40"
            android:layout_marginRight="@dimen/_40"
            android:layout_marginTop="@dimen/_10"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:hint="@string/full_name"
                android:maxLines="1"
                android:paddingLeft="@dimen/_20"
                android:singleLine="true"
                android:textColorHint="@color/hintHighLightText" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/_20"
                android:singleLine="true"
                android:textColorHint="@color/hintHighLightText" />

            <EditText
                android:id="@+id/edtRetypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:inputType="textPassword"
                android:hint="@string/retype_password"
                android:maxLines="1"
                android:paddingLeft="@dimen/_20"
                android:singleLine="true"
                android:textColorHint="@color/hintHighLightText" />

            <EditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:hint="@string/emil_address"
                android:maxLines="1"
                android:paddingLeft="@dimen/_20"
                android:singleLine="true"
                android:textColorHint="@color/hintHighLightText" />

            <TextView
                android:id="@+id/txtViewPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:clickable="false"
                android:ellipsize="end"
                android:hint="@string/phno"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="@dimen/_20"
                android:singleLine="true"
                android:textColorHint="@color/hintHighLightText" />

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:hint="@string/address"
                android:maxLines="1"
                android:paddingLeft="@dimen/_20"
                android:singleLine="true"
                android:textColorHint="@color/hintHighLightText" />

            <EditText
                android:id="@+id/edtCPR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:visibility="gone"
                android:hint="@string/cpr_no"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="@dimen/_20"
                android:singleLine="true"
                android:textColorHint="@color/hintHighLightText" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40"
                android:layout_gravity="center"
                android:background="@drawable/rectangle_button"
                android:onClick="btnRegister"
                android:text="@string/btn_register"
                android:textAllCaps="false" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>