<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


        <LinearLayout
            android:id="@+id/tvMapSourceDestination"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50"
            android:layout_marginLeft="@dimen/_20"
            android:layout_marginRight="@dimen/_20"
            android:layout_marginTop="@dimen/_20"
            android:background="@drawable/shadow_effect_bottom"
            android:gravity="top|center"
            android:orientation="horizontal"
            android:weightSum="100">

        <TextView
            android:id="@+id/tvWhereToGo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/map_marker"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:hint="@string/from_destination_hint_text"
            android:maxLines="1"
            android:singleLine="true" />

        </LinearLayout>

        <!--Service Avaliable -->

        <FrameLayout
            android:id="@+id/choseTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/serviceAvailable"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="100">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="80"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/carMiniLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/_40"
                    android:orientation="vertical">

                <ImageView
                    android:id="@+id/carImg"
                    android:layout_width="@dimen/_50"
                    android:layout_height="@dimen/_50"
                    android:layout_marginBottom="@dimen/_06"
                    android:layout_marginTop="@dimen/_08"
                    android:src="@drawable/sedan_orange" />

                <TextView
                    android:id="@+id/carTypeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_04"
                    android:textSize="@dimen/_12"
                    android:text="Sayara  Mini"
                    android:textColor="@color/highLightText" />

                <TextView
                    android:id="@+id/cashAmt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12"
                    android:layout_marginBottom="@dimen/_04"
                    android:text="Cash Amt "
                    android:textColor="@color/highLightText" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/carTruck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/truckImg"
                            android:layout_width="@dimen/_50"
                            android:layout_height="@dimen/_50"
                            android:layout_marginBottom="@dimen/_06"
                            android:layout_marginTop="@dimen/_08"
                            android:src="@drawable/pick_up_grey" />

                        <TextView
                            android:id="@+id/truckTypeTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_04"
                            android:textSize="@dimen/_12"
                            android:text="Sayara PickUp"
                            android:textColor="@color/hintHighLightText" />

                        <TextView
                            android:id="@+id/tCashAmt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_04"
                            android:text="Cash Amt "
                            android:textSize="@dimen/_12"
                            android:textColor="@color/hintHighLightText" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_10"
                android:layout_marginLeft="@dimen/_20"
                android:layout_marginRight="@dimen/_20"
                android:layout_weight="20"
                android:gravity="center">

                <Button
                    android:id="@+id/btnRideNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle_button"
                    android:text="@string/btn_ride_now_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>
        </FrameLayout>

        <!--Service Unavliable -->

        <FrameLayout
            android:id="@+id/serviceUnavailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:visibility="gone">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="100">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="70"
                android:gravity="center">

                <com.voyager.sayara.costom.CircleImageView
                    android:layout_width="@dimen/_50"
                    android:layout_height="@dimen/_50"
                    android:src="@drawable/profile" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:background="@color/dark_red"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_unavailable"
                    android:textColor="@color/white" />


            </LinearLayout>


        </LinearLayout>

        </FrameLayout>

        <!--Trip Start -->

        <include layout="@layout/trip_start_up" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/_20"
            app:backgroundTint="@color/white"
            android:src="@drawable/map_pointer" />

        <FrameLayout
            android:id="@+id/frameLoaderLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_transparent"
            android:visibility="gone">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="@dimen/_24"
                android:layout_height="@dimen/_24"
                android:layout_gravity="center"
                android:src="@drawable/gallery_gif_loader" />

        </FrameLayout>


    </FrameLayout>


</LinearLayout>